# temporal

./: .gitignore  CLAUDE.md  Makefile  go.mod  go.sum
dagster/: .dockerignore  .env.example  .env.mock.example  Dockerfile  Makefile  README.md  dagster.yaml  docker-compose.mock.yml  docker-compose.yml  pyproject.toml  workspace.yaml
dagster/db/maintenance/: reset_brreg_working_store.sql
dagster/db/migrations/: 000001_brreg_working_store.down.sql  000001_brreg_working_store.up.sql  000002_brreg_task_jobs.down.sql  000002_brreg_task_jobs.up.sql  000003_brreg_domain_signal_jobs.down.sql  000003_brreg_domain_signal_jobs.up.sql  000004_brreg_raw_record_task_states.down.sql  000004_brreg_raw_record_task_states.up.sql  000005_brreg_observability_views.down.sql  000005_brreg_observability_views.up.sql  000006_normalize_brreg_domain_slashes.down.sql  000006_normalize_brreg_domain_slashes.up.sql  000007_brreg_domain_web_search_llm.down.sql  000007_brreg_domain_web_search_llm.up.sql  000008_brreg_raw_task_queue_indexes.down.sql  000008_brreg_raw_task_queue_indexes.up.sql  000009_brreg_raw_task_cursors.down.sql  000009_brreg_raw_task_cursors.up.sql  000010_brreg_task_run_leases.down.sql  000010_brreg_task_run_leases.up.sql  000011_brreg_task_state_execution_leases.down.sql  000011_brreg_task_state_execution_leases.up.sql  000012_brreg_domain_discovery_dependencies.down.sql  000012_brreg_domain_discovery_dependencies.up.sql  000013_brreg_domain_results.down.sql  000013_brreg_domain_results.up.sql  000014_brreg_currency_results.down.sql  000014_brreg_currency_results.up.sql  000015_brreg_translation_artifact_indexes.down.sql  000015_brreg_translation_artifact_indexes.up.sql  000016_brreg_task_failure_classification.down.sql  000016_brreg_task_failure_classification.up.sql  000017_brreg_translation_failed_artifact_model.down.sql  (+5 more)
dagster/scripts/: generate_mock_brreg_fixture.py  run_mock_e2e.py
dagster/tests/: test_dagster_runtime_config.py  test_definitions.py  test_docker_migrations.py
python/: main.py
services/crawl-service/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml
services/translation-service/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml
(+293 files in other folders)
