[project]
name = "corpscout-dagster"
version = "0.1.0"
description = "Dagster pipelines for Corpscout source ingestion and enrichment"
readme = "README.md"
authors = [
    { name = "Goran Raovic", email = "goran.raovic@pulsarpoint.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.13.6",
    "dagster-webserver>=1.13.6",
    "httpx>=0.28.1",
    "ijson>=3.3.0",
    "psycopg[binary]>=3.3.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
corpscout-dagster = "corpscout_dagster:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
